# eight_rooks_task

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Readme.md
docs/: PRD.md
source/: CMakeLists.txt  board.cpp  board.hpp  main.cpp  rook.cpp  rook.hpp  settings.cpp  settings.hpp
source/board/: board.cpp  board.hpp  board_helpers.hpp  position.hpp
source/error/: error.cpp  error.hpp
source/figures/: rook.cpp  rook.hpp
source/logger/: logger.cpp  logger.hpp
source/settings/: settings.cpp
source/utils/: auto_cpu_timer.hpp  rooks_synchronizer.hpp
tests/: CMakeLists.txt
